--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jboss.test-audit</groupId>
         <artifactId>jboss-test-audit-parent</artifactId>
-        <version>2.0.1.Final</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>jboss-test-audit-impl</artifactId>
