--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.jboss.test-audit</groupId>
     <artifactId>jboss-test-audit-parent</artifactId>
-    <version>2.0.1.Final</version>
+    <version>2.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Test Audit Utils Parent</name>
 
@@ -33,9 +33,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git://github.com/jboss/jboss-test-audit.git</connection>
-        <developerConnection>scm:git:git@github.com:jboss/jboss-test-audit.git</developerConnection>
-        <url>https://github.com/jboss/jboss-test-audit</url>
+        <connection>scm:git:git://github.com/jakartaredhat/jboss-test-audit.git</connection>
+        <developerConnection>scm:git:git@github.com:jakartaredhat/jboss-test-audit.git</developerConnection>
+        <url>https://github.com/jakartaredhat/jboss-test-audit</url>
       <tag>HEAD</tag>
   </scm>
 
